--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -62,7 +64,9 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.4.7"
+    "@capacitor/cli": "2.4.7",
+    "gh-pages": "^3.1.0"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "homepage": "http://wude935.github.io/virtual-pet"
 }
